--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
       <button onclick="reset()">Reset</button>
     </div>
 
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
